php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #49306 socket settings are ignored
Submitted: 2009-08-20 08:46 UTC Modified: 2012-09-10 14:55 UTC
From: aaatoja at o2 dot pl Assigned: laruence (profile)
Status: Closed Package: PDO related
PHP Version: 5.3.0 OS: Opensuse 11.0
Private report: No CVE-ID: None
 [2009-08-20 08:46 UTC] aaatoja at o2 dot pl
Description:
------------
PHP 5.3.0 My php.ini settings:
[Pdo_mysql]
pdo_mysql.default_socket= /srv/mysql/mysql.sock

[MySQL]
mysql.default_port = 3306
mysql.default_socket = /srv/mysql/mysql.sock

Mysql or Mysqli connection works fine but PDO throws error: Can't connect to local MySQL server through socket '/var/lib/mysql/mysql.sock' (2)

Socket must be hardcoded somewhere.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-08-20 12:13 UTC] svn@php.net
Automatic comment from SVN on behalf of iliaa
Revision: http://svn.php.net/viewvc/?view=revision&revision=287504
Log: Fixed bug #49306 (inside pdo_mysql default socket settings are ignored).
 [2009-08-20 12:13 UTC] iliaa@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2009-08-21 07:46 UTC] svn@php.net
Automatic comment from SVN on behalf of tony2001
Revision: http://svn.php.net/viewvc/?view=revision&revision=287530
Log: fix build broken by the fix for bug #49306
 [2011-10-28 01:26 UTC] gnoodl+php at gmail dot com
Status should be OPEN. This bug is still present in 5.3.8

See http://staging.philipbrown.id.au/pdo-test.php
 [2012-09-10 14:25 UTC] ain at flashbit dot net
I can confirm this bug on PHP 5.3.15 (cli) (built: Sep 10 2012 15:28:30) installed 
over MacPorts.
 [2012-09-10 14:55 UTC] laruence@php.net
I can not reproduce this, could you try to test with the pure official php 
downloaded from php.net?
 [2012-09-10 14:55 UTC] laruence@php.net
-Assigned To: +Assigned To: laruence
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC