Fixed bug #49306 (inside pdo_mysql default socket settings are ignored).