ext/pdo_mysql/mysql_driver.c
@@ -552,12 +552,10 @@ static struct pdo_dbh_methods mysql_methods = {
 };
 /* }}} */
 
-#ifndef PDO_MYSQL_UNIX_ADDR
-# ifdef PHP_WIN32
-#  define MYSQL_UNIX_ADDR	"MySQL"
-# else
-#  define MYSQL_UNIX_ADDR	PDO_MYSQL_G(default_socket)
-# endif
+#ifdef PHP_WIN32
+# define MYSQL_UNIX_ADDR	"MySQL"
+#else
+# define MYSQL_UNIX_ADDR	PDO_MYSQL_G(default_socket)
 #endif
 
 /* {{{ pdo_mysql_handle_factory */
